--- a/pom.xml
+++ b/pom.xml
@@ -2,20 +2,48 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.jungeakademie.pia</groupId>
   <artifactId>com.jungeakademie.pia</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <version>0.0.1</version>
   <name>Pia-Server</name>
   <description>Server for PIA</description>
+  
+  <properties>
+    <java.version>1.8</java.version>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+</properties>
+  
+  <dependencies>
+	
+	<dependency>
+		<groupId>org.jsoup</groupId>
+		<artifactId>jsoup</artifactId>
+		<version>1.8.3</version>
+	</dependency>
+	
+  </dependencies>
+
+  
   <build>
-    <sourceDirectory>src</sourceDirectory>
     <plugins>
       <plugin>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.3</version>
-        <configuration>
-          <source/>
-          <target/>
-        </configuration>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-maven-plugin</artifactId>
+        <executions>
+          <execution>
+            <goals>
+              <goal>build-info</goal>
+            </goals>
+            <configuration>
+				<mainClass>JavaFXApplication</mainClass>
+              <additionalProperties>
+                <encoding.source>UTF-8</encoding.source>
+                <java.source>1.8</java.source>
+                <java.target>1.8</java.target>
+              </additionalProperties>
+            </configuration>
+          </execution>
+        </executions>
       </plugin>
     </plugins>
-  </build>
+</build>
 </project>
