--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,44 @@
    
    <build>
 		<plugins>
+		
+		<plugin>
+			<groupId>org.apache.maven.plugins</groupId>
+			<artifactId>maven-dependency-plugin</artifactId>
+			<version>2.1</version>
+			<executions>
+			 <execution>
+			  <id>copy-dependencies</id>
+			  <phase>package</phase>
+			  <goals>
+			   <goal>copy-dependencies</goal>
+			  </goals>
+			  <configuration>
+			   <outputdirectory>${project.build.directory}/lib</outputdirectory>
+			   <overwritereleases>false</overwritereleases>
+			   <overwritesnapshots>false</overwritesnapshots>
+			   <overwriteifnewer>true</overwriteifnewer>
+			  </configuration>
+			 </execution>
+			</executions>
+		 </plugin>
+		
+		  <plugin>
+			<groupId>org.apache.maven.plugins</groupId>
+			<artifactId>maven-jar-plugin</artifactId>
+			<version>2.4</version>
+			<configuration>
+			  <archive>
+				<manifest>
+					<mainClass>JavaFXApplication</mainClass>
+					<addClasspath>true</addClasspath>
+					<classpathPrefix>lib/</classpathPrefix>
+				</manifest>
+			  </archive>
+			</configuration>
+		  </plugin>
+		  
+		<!--
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-shade-plugin</artifactId>
@@ -72,6 +110,7 @@
 				  </execution>
 				</executions>
 			</plugin>
+		-->
 			
 			<!--
 			<plugin>
@@ -119,5 +158,6 @@
 			
 		</plugins>
 	</build>
+	
    
 </project>
