--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,12 @@
 		<artifactId>jsoup</artifactId>
 		<version>1.11.1</version>
 	</dependency>
+	
+	<dependency>
+		<groupId>com.google.code.gson</groupId>
+		<artifactId>gson</artifactId>
+		<version>2.6.2</version>
+	</dependency>
    </dependencies>
    
    <build>
@@ -38,14 +44,16 @@
 					<configuration>
 					  <transformers>
 						<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-						  <mainClass>JavaFXApplication</mainClass>
+						  <mainClass>Server</mainClass>
 						</transformer>
 					  </transformers>
+					  <outputDirectory>${basedir}</outputDirectory>
 					</configuration>
 				  </execution>
 				</executions>
 			</plugin>
 			
+			<!--
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-resources-plugin</artifactId>
@@ -70,7 +78,9 @@
 				  </execution>
 				</executions>
 			</plugin>
+			-->
 			
+			<!--
 			<plugin>
 				<groupId>com.heroku.sdk</groupId>
 				<artifactId>heroku-maven-plugin</artifactId>
@@ -85,6 +95,7 @@
 				</configuration>
 
 			</plugin>
+			-->
 			
 		</plugins>
 	</build>
