--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,12 @@
 		<artifactId>gson</artifactId>
 		<version>2.6.2</version>
 	</dependency>
+	
+	<dependency>
+		<groupId>org.postgresql</groupId>
+		<artifactId>postgresql</artifactId>
+		<version>42.2.2.jre7</version>
+	</dependency>
    </dependencies>
    
    <build>
