--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,12 @@
 		<artifactId>postgresql</artifactId>
 		<version>42.2.2.jre7</version>
 	</dependency>
+	
+	<dependency>
+		<groupId>commons-codec</groupId>
+		<artifactId>commons-codec</artifactId>
+    <version>1.11</version>
+	</dependency>
    </dependencies>
    
    <build>
